<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@android:color/white">

    <EditText
        android:id="@+id/etCorreoRecuperar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/correo_electr_nico"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btnEnviarCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enviar_correo"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/enviar_correo_desc"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>
