<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#F9F9F9">

    <TextView
        android:id="@+id/tvTituloHistorial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/historial_de_partidas"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#333333"
        android:gravity="center"
        android:layout_marginBottom="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewHistorial"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingBottom="8dp"
        android:contentDescription="@string/lista_del_historial_de_partidas"/>

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/cyan_500"
        android:textColor="#FFFFFF"/>
</LinearLayout>
