<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_500"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Contenedor superior para monedas y tiradas -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvMonedas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/monedas_default"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvTiradas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/tiradas_default"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>
    <!-- Espacio para empujar la ruleta hacia abajo -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Flecha encima de la ruleta -->
    <ImageView
        android:id="@+id/imgFlecha"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/flecha_desc"
        android:src="@drawable/flecha" />

    <!-- Ruleta personalizada -->
    <com.example.nativex.ui.RuletaView
        android:id="@+id/ruletaView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:background="@android:color/white" />


    <!-- Espacio para empujar los botones hacia abajo -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Botones centrados en la parte inferior -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnTirar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tirar" />

        <Button
            android:id="@+id/btnSalir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/salir" />
    </LinearLayout>

</LinearLayout>
