<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green_500"
    android:padding="16dp">

    <!-- Monedas y Tiradas en vertical arriba a la izquierda -->
    <LinearLayout
        android:id="@+id/infoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvMonedas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monedas_100"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:id="@+id/tvTiradas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tiradas_5"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>
    </LinearLayout>

    <!-- Botón de sonido arriba a la derecha -->
    <ImageView
        android:id="@+id/btnSonido"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/altavoz_off"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Ruleta centrada -->
    <ImageView
        android:id="@+id/ruletaImageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/ruletafinal"
        android:rotation="1"
        app:layout_constraintTop_toBottomOf="@id/infoLayout"
        app:layout_constraintBottom_toTopOf="@id/btnTirar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"/>

    <!-- Botón Tirar -->
    <Button
        android:id="@+id/btnTirar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tirar"
        app:layout_constraintTop_toBottomOf="@id/ruletaImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <!-- Botones inferiores -->
    <LinearLayout
        android:id="@+id/botonesInferiores"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnTirar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btnReiniciar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reiniciar"/>

        <Button
            android:id="@+id/btnSalir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/salir"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGuardarCaptura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/captura" />

        <ImageView
            android:id="@+id/imageViewCaptura"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:visibility="gone"
            android:scaleType="fitCenter"
            android:layout_marginTop="16dp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
